# TalkBack

./: README.md
agent/: .env.example  README.md  config.py  main.py  pyproject.toml
agent/services/: llm.py  stt.py  tts.py
web/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
web/src/app/: page.tsx
web/src/app/api/documents/: route.ts
web/src/app/api/documents/[doc_id]/: route.ts
web/src/app/api/documents/upload/: route.ts
web/src/app/api/health/: route.ts
web/src/app/api/livekit/token/: route.ts
web/src/app/api/search/: route.ts
web/src/components/: Call.tsx  KBUpload.tsx  TalkBackApp.tsx
web/src/lib/: clientApi.ts  rag.ts
